--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,9 +9,9 @@
 
   <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
   
-  <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/stylesheet.css" | prepend: site.baseurl }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/github-light.css" | prepend: site.baseurl }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/print.css" | prepend: site.baseurl }}" media="print">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
