--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -771,6 +771,36 @@ footer a:hover {
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
 
+/* Make the Contents slightly smaller */
+
+h2#contents + ol {
+  list-style-type: none;
+  font-size: 80%;
+}
+
+h2#contents + ul {
+  font-size: 80%;
+}
+
+
+#sidebar h4 {
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 15px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+#sidebar ul {
+  margin-top: 0px;
+}
+
+h3#additional-tools ~ ul li p:first-child {
+  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+  font-size: 110%;
+}
+
+
 /* #Media Queries
 ================================================== */
 
