--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,10 @@ layout: default
 
 <section id="main-content">
 
+{% if page.title %}
+<h1 class="page-title">{{ page.title }}</h1>
+{% endif %}
+
 {{ content }}
 
 </section>
