--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,25 @@
 ---
 layout: default
 ---
-<div class="post">
+<section id="main-content">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+{% if page.title %}
+<h1 class="post-title">{{ page.title }}</h1>
+{% endif %}
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+<p class="post-meta">
+{% if page.date %}Posted on {{ page.date | date: "%B %-d, %Y" }}{% if page.author %} by {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}.{% endif %}
+</p>
 
-</div>
+{{ content }}
+
+<hr/>
+<p class="post-footer">
+This entry was posted in
+{% assign add_separator = false %}
+{% for item in page.categories %}{% if add_separator %}, {% else %}{% assign add_separator = true %}{% endif %}<strong>{{ item | downcase }}</strong>{% endfor %}
+and tagged
+{% assign add_separator = false %}
+{% for item in page.tags %}{% if add_separator %}, {% else %}{% assign add_separator = true %}{% endif %}<strong>{{ item | downcase }}</strong>{% endfor %}.
+</p>
+</section>
