--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@
 <div id="content-wrapper">
 <div class="inner clearfix">
       
+<section id="main-content">
+
 {{ content }}
+
+</section>
 
 <aside id="sidebar">
 
