news.md page added
- home.md & news.md moved to /site
- top 5 latest news in sidebar

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -808,6 +808,10 @@ p.post-meta {
   font-size: 80%;
 }
 
+a.post-smaller {
+  font-size: 80%;
+}
+
 /* #Media Queries
 ================================================== */
 
