--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -614,7 +614,10 @@ form {
 
 #main-content h1 {
   margin-top: 0;
-  margin-bottom: 0;
+  /* margin-bottom: 0; */
+  line-height: 1.1;
+  margin-bottom: 20px;
+
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   font-size: 2.8em;
   font-weight: normal;
