sidebar.md moved to site/

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
 <aside id="sidebar">
 
-{% markdown sidebar.md %}
+{% markdown ../site/sidebar.md %}
 
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
