Add 'Last modified on' to all pages & posts

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,3 +7,8 @@ layout: default
 {% endif %}
 
 {{ content }}
+
+<hr/>
+<p class="page-footer">
+Last modified on {{ page.last_modified_at | date: '%c %Z' }}.
+</p>
