--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -822,6 +822,10 @@ a.post-smaller {
   font-size: 80%;
 }
 
+p.page-footer {
+  font-size: 80%;
+}
+
 /* #Media Queries
 ================================================== */
 
