--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,9 +14,10 @@ layout: default
 
 <hr/>
 <p class="post-footer">
-{% if page.categories.size > 0 %}This entry was posted in
+{% if page.categories.size > 0 %}Posted in
 {% assign add_separator = false %}
 {% for item in page.categories %}{% if add_separator %}, {% else %}{% assign add_separator = true%}{% endif %}<strong>{{ item | downcase }}</strong>{% endfor %}{% if page.tags.size > 0 %} and tagged
 {% assign add_separator = false %}
 {% for item in page.tags %}{% if add_separator %}, {% else %}{% assign add_separator = true %}{% endif %}<strong>{{ item | downcase }}</strong>{% endfor %}{% endif %}.{% endif %}
+</br>Last modified on {{ page.last_modified_at | date: '%c %Z' }}.
 </p>
