--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <div class="inner">
-    <h1>{{ site.title }}</h1>
+    <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <h2>{{ site.description }}</h2>
     <a href="{{ site.github-project-url }}" class="button"><small>Follow me on</small> GitHub</a>
   </div>
