--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -10,5 +10,5 @@ layout: default
 
 <hr/>
 <p class="page-footer">
-Page last updated on {{ page.last_modified_at | date: '%c %Z' }}.
+Last modified on {{ page.last_modified_at | date: '%c %Z' }}.
 </p>
