TOC added to pages
- add redcarpet extensions
- use '</code></pre>' kludge
- patch TOC plug-in
- add MyFilters.rb
- remove manual Contents sections
- add '$' in shell code blocks
- add style="clear: both;" to FAQ page
- mobile.css separate file

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 <h1 class="page-title">{{ page.title }}</h1>
 {% endif %}
 
-{{ content }}
+{{ content | toc_generate | replace_regexp: '\<\/code\>\n\<\/pre\>', '</code></pre>' }}
 
 <hr/>
 <p class="page-footer">Last modified on {{ page.last_modified_at | date: '%c %Z' }}.</p>
