--- a/_includes/layouts/head.html
+++ b/_includes/layouts/head.html
@@ -27,7 +27,10 @@
   <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/stylesheet.css" | prepend: site.baseurl }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/mobile.css" | prepend: site.baseurl }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/github-light.css" | prepend: site.baseurl }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/toc.css" | prepend: site.baseurl }}" media="screen">
+
   <link rel="stylesheet" type="text/css" href="{{ "/stylesheets/print.css" | prepend: site.baseurl }}" media="print">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
