--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,7 +8,7 @@ layout: default
 
 {{ content }}
 
-<hr/>
+<hr class="page-footer"/>
 <p class="page-footer">
 Last modified on {{ page.last_modified_at | date: '%c %Z' }}.
 </p>
