--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,5 +8,5 @@ layout: default
 
 {{ content | toc_generate | replace_regexp: '\<\/code\>\n\<\/pre\>', '</code></pre>' }}
 
-<hr/>
+<hr class="page-footer"/>
 <p class="page-footer">Last modified on {{ page.last_modified_at | date: '%c %Z' }}.</p>
