--- a/_includes/layouts/head.html
+++ b/_includes/layouts/head.html
@@ -26,12 +26,12 @@
 
   <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css{% buster %}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/mobile.css{% buster %}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/github-light.css{% buster %}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/toc.css{% buster %}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css?{{ site.css-date }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/mobile.css?{{ site.css-date }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/github-light.css?{{ site.css-date }}" media="screen">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/toc.css?{{ site.css-date }}" media="screen">
 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css{% buster %}" media="print">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css?{{ site.css-date }}" media="print">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
 
