--- a/stylesheets/toc.css
+++ b/stylesheets/toc.css
@@ -2,6 +2,7 @@
 #toc, .toc, .mw-warning {
     background-color: #F9F9F9;
     border: 1px solid #AAAAAA;
+    font-weight: 400;
     font-size: 95%;
     padding: 5px;
 }
@@ -27,6 +28,9 @@
     margin:0 8px 7px 14px;
     padding-left: 0;
     text-align: left;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.4;
 }
 #toc ul ul, .toc ul ul {
     margin: 0 0 0 2em;
@@ -48,7 +52,7 @@
 
 #toc {
   border: solid 1px #ddd;
-  line-height: 1.3;
+  line-height: 1.4;
 }
 
 #toctitle h2:before {
@@ -58,7 +62,7 @@
 
 #toctitle h2 {
   font-size: 100%;
-  font-family: inherit;
+  /* font-family: inherit; */
 }
 
 #toc #toctitle {
@@ -71,7 +75,7 @@
 }
 
 .tocnumber, .toctext {
-  font-size: 90%;
+  font-size: 100%;
 }
 
 table#toc {
