css concatenated in just 2 files

--- a/_includes/layouts/head.html
+++ b/_includes/layouts/head.html
@@ -26,11 +26,7 @@
 
   <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css?{{ site.css-date }}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/mobile.css?{{ site.css-date }}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/github-light.css?{{ site.css-date }}" media="screen">
-  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/toc.css?{{ site.css-date }}" media="screen">
-
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/screen.css?{{ site.css-date }}" media="screen">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css?{{ site.css-date }}" media="print">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
