--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 <div id="content-wrapper">
 <div class="inner clearfix">
 
+<div id="site-body">
 <section id="main-content">
 
 {{ content }}
@@ -19,10 +20,13 @@
 {% include layouts/sidebar.html %}
 
 </div>
-
 </div>
 
+<div class="inner clearfix">
 {% include layouts/footer.html %}
+</div>
+
+</div>
 
 </body>
 
