--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,3 +10,4 @@ layout: default
 
 <hr class="page-footer"/>
 <p class="page-footer">Last modified on {{ page.last_modified_at | date: '%c %Z' }}.</p>
+<div class="fb-share-button" data-href="{{ site.url }}{{ site.baseurl }}{{ page.url }}" data-layout="button"></div>
