plugins/install/ - mention marketplace as first choice

--- a/_includes/layouts/header.html
+++ b/_includes/layouts/header.html
@@ -2,6 +2,8 @@
   <div class="inner">
     <h1><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
     <h2>{{ site.description }}</h2>
-    <a href="{{ site.github-project-url }}" class="button"><small>Follow me on</small> GitHub</a>
+    <div id="buttons">
+      <a href="{{ site.github-project-url }}" class="button"><small>Follow me on</small> GitHub</a>
+    </div>
   </div>
 </header>
