--- a/_includes/stylesheets/stylesheet.css
+++ b/_includes/stylesheets/stylesheet.css
@@ -478,6 +478,10 @@ header h2 {
   letter-spacing: 0;
 }
 
+header div div.buttons {
+    float: right;
+}
+
 .inner {
   position: relative;
   width: 940px;
